--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="X.png">
 
     <link rel="stylesheet" href="Style.css" />
-    <script type="module" src="./Code/Main.js"></script>
+    <script type="module" src="./Main.js"></script>
   </head>
   <body>
     <p id="Info" class="InfoLog">Please select a field.</p>
